# textbook-reader

./: .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  README.md  _probe_provider.py  crawl-refill.sh  deploy.sh  docker-compose.yml  index.html  problems.html  provider.sh  pyproject.toml
assets/: qbank-shared.css  qbank-shared.js
book_pipeline/: AGENTS.md  agent_history.py  agent_prompt.md  apply_catalog_overrides.py  apply_math_overrides.py  audit_scout.py  backfill_math.py  book_audit.py  book_qc.py  book_timeline.py  booklists.py  build_catalogs.py  catalog_audit.py  com.qbank.bookpipeline.plist  com.textbookreader.bookpipeline.plist  com.textbookreader.devsnapshot.plist  cpu_gate.py  crawl_wishlist.json  crawl_zlib.py  daemon_run.sh  dev_control.py  devctl.py  devsnapshot_run.sh  discovered.py  drive_queue.py  editions.py  extract_cover.py  fields.json  fields.py  intake.py  jsonio.py  leases.py  lint_latex.py  llm_policy.py  math_audit.py  math_macros.json  math_normalize.py  math_sweep.py  math_validate.py  maturity.py  (+105 more)
book_pipeline/booklists/: biology.json  chemistry.json  cs.json  ee.json  materials.json  math.json  ml_stats_econ.json  physics.json  undergrad_foundations.json
book_pipeline/catalog_overrides/: ahlfors_complex.json  aho_compilers.json  aitchison_hey_gauge_theories.json  alberts_molecular_biology_cell.json  allen_holberg_cmos_analog.json  altland_simons_cmft.json  anderson_security_engineering.json  arfken_mp7.json  axler_linalg.json  (+284 more)
deploy/: nginx.conf
design/: DESIGN.md  preview.html  tokens.css
dev/: index.html
textbooks/: corpus.py
(+2689 files in other folders)
