[project]
name = "textbook-reader"
version = "0.1.0"
description = "Self-contained textbook pipeline + static reader (crawl→ingest→parse→bake→serve)"
requires-python = ">=3.13"
dependencies = [
    "pymupdf>=1.27.2.3",
    "pillow>=12.2.0",
    "requests>=2.31.0",
    "pyyaml>=6.0",
    "opencc>=1.3.1",
    "python-dotenv>=1.2.2",
    "playwright>=1.40",
]
